# narashi

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.claude/skills/model-eval/: SKILL.md
.github/workflows/: publish.yml
docs/: benchmarks.md
examples/: benchmark.rs  candle_eval.rs  check.rs  eval.rs  fine_sweep.rs  pairdump.rs  robustness.rs
src/: candle_backend.rs  eval.rs  lib.rs  main.rs
tests/data/: distractors.txt  glossary.txt
