[package]
name = "narashi"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "多言語埋め込みで類似テキストを検出し、より汎用的な表記に統合して表記ゆれを解消するライブラリ・CLI"
repository = "https://github.com/Mokuichi147/narashi"
readme = "README.md"
keywords = ["nlp", "embeddings", "similarity", "deduplication", "fuzzy-matching"]
categories = ["text-processing", "command-line-utilities"]

[[bin]]
name = "narashi"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "benchmark"
required-features = ["onnx"]

[[example]]
name = "fine_sweep"
required-features = ["onnx"]

# Candle バックエンド専用の評価 example(ORT 不要)。ONNX Runtime バイナリを
# 取得できない環境で qwen3 / e5-instruct 等の Candle モデルだけを計測する。
[[example]]
name = "candle_eval"
required-features = ["candle"]

[features]
default = ["onnx", "candle", "cli"]
# ONNX Runtime バックエンド(fastembed)。組み込みカタログと Xenova/ONNX 変換モデルを扱う。
onnx = ["dep:fastembed"]
# Candle バックエンド(ピュア Rust)。HF の safetensors を直接読み込み、ONNX 変換が
# 存在しない XLM-RoBERTa 系モデルも利用できる。ネイティブ ONNX Runtime バイナリを
# 取得できない環境(オフライン・制限ネットワーク等)でも `--no-default-features --features candle` でビルド可能。
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:serde_json"]
# CLI バイナリ(`narashi` コマンド)。ライブラリとして使うだけなら無効にして `clap` 依存を外せる。
cli = ["dep:clap"]

[dependencies]
fastembed = { version = "4", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["http", "onig"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"], optional = true }
hf-hub = "0.4"
rayon = "1"
